--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -6,6 +6,22 @@
         "Login": "Login",
         "Register": "Registrar"
     },
+    "Login":{
+        "Signin": "Entrar",
+        "ForgotPass": "Olvidó la contraseña?",
+        "Remember": "Recuérdame", 
+        "HaveNotAccount": "No tienes una cuenta? Registrate!",
+        "Password": "Contraseña"
+    },
+    "Register":{
+        "Signup": "Registrate",
+        "FirstName": "Primer nombre",
+        "LastName": "Apellido", 
+        "Email": "Dirección de email",
+        "Password": "Contraseña",
+        "InfoEmail": "Quiero recibir descuentos, promociones y noticias via email.",
+        "HaveAccount": "Ya tenés una cuenta? Logueate!"
+    },
     "Home":{
         "Stores": "Comercios cerca tuyo",
         "SearchingStores": "Buscando comercios...",
@@ -13,6 +29,14 @@
     },
     "Location":{
         "SearchProducts": "Buscar productos"
+    },
+    "Product":{
+        "Quantity": "Cantidad", 
+        "Add": "Agregar",
+        "Remove": "Remover"
+    },   
+    "Total":{
+        "Total": "Total"
     },
     "Footer":{
         "Body": "Buy from Home es una aplicacion que te acerca los comercios de tu zona a tu casa."
