--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -21,9 +21,20 @@
         "Password": "Contraseña",
         "InfoEmail": "Quiero recibir descuentos, promociones y noticias via email.",
         "HaveAccount": "Ya tenés una cuenta? Logueate!",
-        "User": "Registrate como usuario",
-        "Store": "Registrate como comercio",
+        "User": "Usuario",
+        "Store": "Comercio",
         "Go": "Adelante!"
+    },
+    "RegisterStore":{
+        "AddStore": "Agregar Comercio",
+        "Name": "Nombre",
+        "Activity": "Actividad",
+        "Street": "Calle",
+        "Number": "Numero",
+        "Locality": "Localidad",
+        "Latitude": "Latitud",
+        "Longitude": "Longitud",
+        "Coverage": "Distancia de cobertura (kms)"
     },
     "Home":{
         "Stores": "Comercios cerca tuyo",
@@ -40,6 +51,16 @@
     },   
     "Total":{
         "Total": "Total"
+    },
+    "Stores":{
+        "Grocery": "Kiosco",
+        "Store": "Almacen",
+        "Butcher": "Carnicería",
+        "Greengrocery": "Verdulería",
+        "Bakery": "Panadería",
+        "Pharmacy": "Farmacia",
+        "Ironmongery": "Ferretería",
+        "Others": "Otros"
     },
     "Footer":{
         "Body": "Buy from Home es una aplicacion que te acerca los comercios de tu zona a tu casa."
