added translation product loading message

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -99,6 +99,9 @@
         "OrderSummary": "Order Summary",
         "Shipping": "Shipping",
         "PaymentDetails": "Payment Details"
+    },
+    "ProductList":{
+        "Loading": "Loading..."
     }
 
 }
