formaters of currency and numbers

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -103,5 +103,10 @@
     "ProductList":{
         "Loading": "Loading..."
     }
+    ,
+    "Format":{
+        "lang": "en-US",
+        "currency": "USD"
+    }
 
 }
