formaters of currency and numbers

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -66,8 +66,8 @@
         "Body": "Buy from Home is an application that brings shops in your area closer to your home."
     },
     "Language":{
-        "English": "Inglés",
-        "Spanish": "Español"
+        "English": "US-EN",
+        "Spanish": "AR-ES"
     },
     "Bag":{
         "Quantity": "Quantity",
