--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -66,8 +66,8 @@
         "Body": "Buy from Home es una aplicacion que te acerca los comercios de tu zona a tu casa."
     },
     "Language":{
-        "English": "Inglés",
-        "Spanish": "Español"
+        "English": "US-EN",
+        "Spanish": "AR-ES"
     },
     "Bag":{
         "Quantity": "Cantidad",
