--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -26,9 +26,12 @@
         "HaveAccount": "Already have an account? Sign in",
         "User": "User",
         "Store": "Store",
-        "Go": "Go!"
+        "Go": "Go!",
+        "AlreadyExists": "Sorry, the email already exists. Please, user another one."
     },
     "RegisterStore":{
+        "Email": "Email",
+        "Password": "Password",
         "AddStore": "Add Store",
         "Name": "Name",
         "Activity": "Activity",
@@ -63,7 +66,8 @@
         "Bakery": "Bakery",
         "Pharmacy": "Pharmacy",
         "Ironmongery": "Ironmongery",
-        "Others": "Others"
+        "Others": "Others",
+        "CompleteFormStores":"Please, fill in all the data."
     },
     "Footer":{
         "Body": "Buy from Home is an application that brings shops in your area closer to your home."
