--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -98,7 +98,11 @@
         "Delivery": "Envio",
         "OrderSummary": "Detalle Compra",
         "Shipping": "Direccion de Envio",
-        "PaymentDetails": "Detalle del Pago" 
+        "PaymentDetails": "Detalle del Pago",
+        "Thankyou": "Gracias por tu compra",
+        "SentMail": " Hemos enviado a tu correo los detalles de tu compra, y te enviaremos otro una vez que tu orden sea enviada",
+        "Orderis": "Tu numero de orden es: ",
+        "GoHome": "Ir al Inicio"
     },
     "ProductList":{
         "Loading": "Buscando..."
@@ -108,4 +112,19 @@
         "lang": "es-AR",
         "currency": "ARS"
     }
+    ,
+    "Errors":{
+        "errorName": "en-US",
+        "errorVacio": "Please ",
+        "errorNumber": "No es un numero",
+        "perfect" : "Perfecto"
+    },
+
+    "Profile":{
+        "Profile": "Perfil",
+        "PurchaseHistory": "Historial de Compras",
+        "Purchases": "Estas son tus compras",
+        "SearchingPurchases": "Buscando..."
+    }
+
 }
